force-app/main/default/objects/SBQQ__Quote__c/fields/Account_is_Fundamental_Stamped__c.field-meta.xml
<CustomField>
    <fullName>Account_is_Fundamental_Stamped__c</fullName>
    <formula>SBQQ__Account__r.Fundamental_Account__c</formula>
    <label>Account is Fundamental Stamped</label>
    <type>Checkbox</type>
</CustomField>