force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>SBQQ__Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>