force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone__c</fullName>
    <formula>SBQQ__Account__r.Phone</formula>
    <label>Account Phone</label>
    <type>Text</type>
</CustomField>