force-app/main/default/objects/SBQQ__Quote__c/fields/Arbutus_Notes__c.field-meta.xml
<CustomField>
    <fullName>Arbutus_Notes__c</fullName>
    <defaultValue>&quot;Please Note:&quot; &amp; BR() &amp;
&quot;All taxes are extra&quot; &amp; BR() &amp;
&quot;Freight is extra unless specifically noted as included.&quot;</defaultValue>
    <label>Arbutus Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>