force-app/main/default/objects/SBQQ__Quote__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <formula>SBQQ__Opportunity2__r.Contract.ContractNumber</formula>
    <label>Contract #</label>
    <type>Text</type>
</CustomField>