force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Number</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Quotes (Contract Number)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>