force-app/main/default/objects/SBQQ__Quote__c/fields/Copy_Expected_End_Date_for_All_Products__c.field-meta.xml
<CustomField>
    <fullName>Copy_Expected_End_Date_for_All_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Dates for All Products</label>
    <type>Checkbox</type>
</CustomField>