force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <formula>SBQQ__Account__r.Customer_Numberr__c</formula>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>