force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <formula>IF(
    RecordType.Name = &quot;Fundamental Quotes&quot;, 
    &quot;FundamentalFieldSet&quot;, 
    IF(
        RecordType.Name = &quot;Arbutus Quotes&quot;, 
        &quot;ArbutusFieldSet&quot;, 
        &quot;ArbutusWestAgency&quot;
    )
)</formula>
    <label>EditLinesFieldSetName</label>
    <type>Text</type>
</CustomField>