force-app/main/default/objects/SBQQ__Quote__c/fields/Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Date__c</fullName>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>