force-app/main/default/objects/SBQQ__Quote__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <formula>IF(
    TEXT(SBQQ__Account__r.Tax_Code_1__c) = &quot;GST&quot;, 
    TEXT(SBQQ__Account__r.Exempt1__c), 
    IF(
        TEXT(SBQQ__Account__r.Tax_code_2__c) = &quot;GST&quot;, 
        TEXT(SBQQ__Account__r.Exempt2__c), 
        &quot;&quot;
    )
)</formula>
    <label>GST #:</label>
    <type>Text</type>
</CustomField>