force-app/main/default/objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <formula>IF(
    ISBLANK(SBQQ__Opportunity2__c),
    CASE(
        RecordType.Name,
        &quot;Arbutus Quotes&quot;, &quot;ArbutusFieldSet&quot;,
        &quot;Fundamental Quotes&quot;, &quot;FundamentalFieldSet&quot;,
        &quot;ArbutusWestAgency&quot;
    ),
    CASE(
        SBQQ__Opportunity2__r.RecordType.Name,
        &quot;Fundamental Power Solutions&quot;, &quot;FundamentalFieldSet&quot;,
        &quot;Arbutus West Agency Ltd.&quot;, &quot;ArbutusWestAgency&quot;,
        &quot;AWAL Distributor&quot;, &quot;ArbutusFieldSet&quot;,
        &quot;ArbutusWestAgency&quot;
    )
)</formula>
    <label>HeaderFieldSetName</label>
    <type>Text</type>
</CustomField>