force-app/main/default/objects/SBQQ__Quote__c/fields/Installation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Installation_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Needed</label>
    <type>Checkbox</type>
</CustomField>