force-app/main/default/objects/SBQQ__Quote__c/fields/Mark_Up_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_Amount__c</fullName>
    <label>Mark Up Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__Markup__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Markup__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>