force-app/main/default/objects/SBQQ__Quote__c/fields/Net_Amount_Tax__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_Tax__c</fullName>
    <formula>SBQQ__NetAmount__c +  Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount + Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>