force-app/main/default/objects/SBQQ__Quote__c/fields/Notes_for_Scope_of_Work_Bill_of_Material__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Scope_of_Work_Bill_of_Material__c</fullName>
    <label>Notes for Scope of Work/Bill of Material</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>