force-app/main/default/objects/SBQQ__Quote__c/fields/Number_of_Quote_Lines_with_0_QTY__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Quote_Lines_with_0_QTY__c</fullName>
    <label>Number of Quote Lines with 0 QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>