force-app/main/default/objects/SBQQ__Quote__c/fields/Overage_Net_Amount_Tax__c.field-meta.xml
<CustomField>
    <fullName>Overage_Net_Amount_Tax__c</fullName>
    <label>Overage Net Amount Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>