force-app/main/default/objects/SBQQ__Quote__c/fields/Overage_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overage_Tax_Amount__c</fullName>
    <formula>Overage_Net_Amount_Tax__c *  Total_Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overage Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>