force-app/main/default/objects/SBQQ__Quote__c/fields/Override_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Override_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Pricing</label>
    <type>Checkbox</type>
</CustomField>