force-app/main/default/objects/SBQQ__Quote__c/fields/Proposal_Overview__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Overview__c</fullName>
    <label>Proposal Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>