force-app/main/default/objects/SBQQ__Quote__c/fields/Quickbooks_Tax_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Tax_Code_Id__c</fullName>
    <description>Converts QuickBooks tax rate ID to tax code ID for API invoice line items.</description>
    <formula>VALUE(CASE(TEXT( Quickbooks_Billing_Province_Id__c ),
&quot;23&quot;, &quot;13&quot;,
&quot;24&quot;, &quot;14&quot;,
&quot;26&quot;, &quot;16&quot;,
&quot;39&quot;, &quot;29&quot;,
&quot;29&quot;, &quot;19&quot;,
&quot;30&quot;, &quot;20&quot;,
&quot;31&quot;, &quot;21&quot;,
&quot;32&quot;, &quot;22&quot;,
&quot;33&quot;, &quot;23&quot;,
&quot;34&quot;, &quot;24&quot;,
&quot;36&quot;, &quot;26&quot;,
&quot;38&quot;, &quot;28&quot;,
&quot;0&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts QuickBooks tax rate ID to tax code ID for API invoice line items.</inlineHelpText>
    <label>Quickbooks Tax Code Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>