force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_line_has_a_0_inventory__c.field-meta.xml
<CustomField>
    <fullName>Quote_line_has_a_0_inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote line has a 0 inventory</label>
    <type>Checkbox</type>
</CustomField>