force-app/main/default/objects/SBQQ__Quote__c/fields/Services_Included__c.field-meta.xml
<CustomField>
    <fullName>Services_Included__c</fullName>
    <label>Services Included</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>