force-app/main/default/objects/SBQQ__Quote__c/fields/Sum_of_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Year_2__c</fullName>
    <label>Sum of Year 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>