force-app/main/default/objects/SBQQ__Quote__c/fields/Tax_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_1__c</fullName>
    <formula>TEXT(SBQQ__Account__r.Tax_Code_1__c)</formula>
    <label>Tax Code 1</label>
    <type>Text</type>
</CustomField>