force-app/main/default/objects/SBQQ__Quote__c/fields/Tax_Code_1_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_1_Rate__c</fullName>
    <label>Tax Code 1 Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>