force-app/main/default/objects/SBQQ__Quote__c/fields/Tax_Code_1GC__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_1GC__c</fullName>
    <label>Tax Code 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>HST</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>RST</fullName>
            </value>
            <value>
                <fullName>QST</fullName>
            </value>
            <value>
                <fullName>NTX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>