force-app/main/default/objects/SBQQ__Quote__c/fields/Tax_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_2__c</fullName>
    <formula>TEXT(SBQQ__Account__r.Tax_code_2__c)</formula>
    <label>Tax Code 2</label>
    <type>Text</type>
</CustomField>