force-app/main/default/objects/SBQQ__Quote__c/fields/Term_Codes__c.field-meta.xml
<CustomField>
    <fullName>Term_Codes__c</fullName>
    <label>Term Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NET 30</fullName>
            </value>
            <value>
                <fullName>NET 45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>