force-app/main/default/objects/SBQQ__Quote__c/fields/Term_Days__c.field-meta.xml
<CustomField>
    <fullName>Term_Days__c</fullName>
    <formula>Expected_End_Date__c -  SBQQ__StartDate__c</formula>
    <label>Term (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>