force-app/main/default/objects/SBQQ__Quote__c/fields/Today_Quote_Template__c.field-meta.xml
<CustomField>
    <fullName>Today_Quote_Template__c</fullName>
    <formula>TODAY()</formula>
    <label>Today (Quote Template)</label>
    <type>Date</type>
</CustomField>