force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Rate__c</fullName>
    <formula>BLANKVALUE(Tax_Code_1_Rate__c, 0) + BLANKVALUE(Tax_Code_2_Rate__c, 0)</formula>
    <label>Total Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>