force-app/main/default/objects/SBQQ__Quote__c/fields/Will_Call_formula__c.field-meta.xml
<CustomField>
    <fullName>Will_Call_formula__c</fullName>
    <formula>IF( Will_Call__c = true, &quot;WILL - CALL&quot; &amp; BR(), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Will Call formula</label>
    <type>Text</type>
</CustomField>