force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Arbutus_Quotes.recordType-meta.xml
<RecordType>
    <fullName>Arbutus_Quotes</fullName>
    <active>true</active>
    <description>Arbutus Quotes</description>
    <label>Arbutus Quotes</label>
</RecordType>