force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Fundamental_Quotes.recordType-meta.xml
<RecordType>
    <fullName>Fundamental_Quotes</fullName>
    <active>true</active>
    <description>Fundamental Quotes</description>
    <label>Fundamental Quotes</label>
</RecordType>