force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Invoicing_Quotes.recordType-meta.xml
<RecordType>
    <fullName>Invoicing_Quotes</fullName>
    <active>true</active>
    <label>Invoicing Quotes</label>
</RecordType>