force-app/main/default/objects/SBQQ__Quote__c/validationRules/Account_must_be_selected_before_creating.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_must_be_selected_before_creating</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Fundamental Quotes&quot;,
ISBLANK(SBQQ__Account__c)
)</errorConditionFormula>
    <errorMessage>Account must be selected before creating a quote.</errorMessage>
</ValidationRule>