force-app/main/default/objects/SBQQ__Quote__c/validationRules/Arbutus_Opp_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Arbutus_Opp_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Arbutus Quotes&quot;,
    ISPICKVAL(SBQQ__Status__c, &quot;Accepted&quot;),
    ISBLANK(SBQQ__Opportunity2__r.Estimated_ship_date__c)
)</errorConditionFormula>
    <errorMessage>Estimated Ship Date must be populated before the quote can be set to Accepted.</errorMessage>
</ValidationRule>