force-app/main/default/objects/SBQQ__Quote__c/validationRules/Quote_Must_Have_An_Opportunity_to_Accept.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Must_Have_An_Opportunity_to_Accept</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(SBQQ__Status__c, &quot;Accepted&quot;),
    ISBLANK(SBQQ__Opportunity2__c)
)</errorConditionFormula>
    <errorMessage>Quote must have an opportunity to move the status to Accepted</errorMessage>
</ValidationRule>