force-app/main/default/objects/SBQQ__Quote__c/listViews/Steve_Glenn_FPS.listView-meta.xml
<ListView>
    <fullName>Steve_Glenn_FPS</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>Net_Amount_Tax__c</columns>
    <columns>SBQQ__PrimaryContact__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Contract__c</columns>
    <columns>Contract_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SBQQ__Quote__c.Fundamental_Quotes</value>
    </filters>
    <label>Steve &amp; Glen FPS</label>
    <sharedTo>
        <group>Fundamentals_Sales_Team</group>
    </sharedTo>
</ListView>